crates/alder-parse/src/snapshots/alder_parse__type___tests__type_var_msg.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\nmsg"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Var(
        "msg",
    ),
}
