crates/alder-parse/src/snapshots/alder_parse__type___tests__type_var_simple.snap
---
source: crates/alder-parse/src/type_.rs
description: "Code:\n\na"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    value: Var(
        "a",
    ),
}
