crates/alder-parse/src/snapshots/alder_parse__type___tests__unit.snap
---
source: crates/alder-parse/src/type_.rs
description: ()
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Unit,
}
