crates/alder-parse/src/snapshots/alder_parse__type___tests__var.snap
---
source: crates/alder-parse/src/type_.rs
description: a
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    value: Var {
        name: "a",
        args: [],
    },
}
