crates/alder-parse/src/snapshots/alder_parse__type___tests__var_applied_after_space.snap
---
source: crates/alder-parse/src/type_.rs
description: "f [a]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Var {
        name: "f",
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: Var {
                    name: "a",
                    args: [],
                },
            },
        ],
    },
}
